[workspace]
members = ["."]
resolver = "2"

[package]
name = "omi-fin-cosmo"
version = "0.1.0"
authors = ["x-dev-private <gabrielcostaribeiro666@gmail.com>"]
edition = "2021"
description = "Custom CW20 token implementation with minting, burning and transfer fees"
license = "Apache-2.0"
repository = "https://github.com/your-repo/omi-fin-cosmo"
homepage = "https://github.com/your-repo/omi-fin-cosmo"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = ["staking", "stargate"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = "1.0.58"

# CW20 dependencies
cw20 = "2.0.0"
cw-controllers = "2.0.0"

# Utilities
cw-utils = "2.0.0"

[dev-dependencies]
cw-multi-test = "2.0.0"
anyhow = "1.0.75"